# nexus

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-windows.yml  cmake.yml
cmake/: CopySDL.cmake  Dependencies.cmake  NexusGame.cmake  NexusLibrary.cmake
include/nexus/: client.h  connection.h  message.h  nexus.h  server.h  singleton.h
include/nexus_game/: nxsg_renderer.h  nxsg_text.h  nxsg_window.h
src/nexus/: client.cpp  connection.cpp  nexus.cpp
src/nexus_game/: main.cpp  nxsg_renderer.cpp  nxsg_text.cpp  nxsg_window.cpp
targets/asio_latency/: CMakeLists.txt
targets/asio_latency/src/: main.cpp
targets/asio_throughput/: CMakeLists.txt
targets/asio_throughput/src/: main.cpp
targets/enet_connect_disconnect/: CMakeLists.txt
targets/enet_connect_disconnect/src/: main.cpp
targets/enet_latency/: CMakeLists.txt
targets/enet_latency/src/: main.cpp
targets/enet_ping/: CMakeLists.txt
targets/enet_ping/src/: main.cpp
targets/enet_send_message/: CMakeLists.txt
targets/enet_send_message/src/: main.cpp
targets/enet_throughput/: CMakeLists.txt
targets/enet_throughput/src/: main.cpp
targets/nexus/: CMakeLists.txt
targets/nexus/include/nexus/: client.h  connection.h  message.h  nexus.h  server.h
targets/nexus/src/: client.cpp  connection.cpp  nexus.cpp
targets/nexus_connect_disconnect/: CMakeLists.txt
targets/nexus_connect_disconnect/src/: main.cpp
targets/nexus_game/: CMakeLists.txt
targets/nexus_game/include/nexus_game/: nxsg_renderer.h  nxsg_text.h  nxsg_window.h
targets/nexus_game/src/: main.cpp  nxsg_renderer.cpp  nxsg_text.cpp  nxsg_window.cpp
targets/nexus_latency/: CMakeLists.txt
targets/nexus_latency/src/: main.cpp
targets/nexus_ping/: CMakeLists.txt
targets/nexus_ping/src/: main.cpp
targets/nexus_send_message/: CMakeLists.txt
targets/nexus_send_message/src/: main.cpp
targets/nexus_throughput/: CMakeLists.txt
targets/nexus_throughput/src/: main.cpp
